# OpenHeart

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  cardio_rish_engine.py  docker-compose.yml  manage.sh  start_tunnel.sh
agents/: AGENTS.md  PROGRESS.md  TODO.md  cdss_algorithms.md  comprehensive_implementation.md  dicom_integration.md  emr_best_practices.md  emr_mvp_plan.md  fhir_interoperability.md  fix_todos_and_bugs_2026-01-23.md  gesy_integration.md  high_priority_gaps_plan.md  implementation_plan.md  security_architecture.md  user_management_plan.md
agents/phases/: phase1_prescriptions.md  phase2_calendar_scheduling.md  phase3_billing.md  phase4_labs_vitals.md  phase5_cds_to_action.md  (+1 more)
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240101_0001_initial_schema.py  20240102_0002_medical_coding_tables.py  20240103_0003_appointments.py  20240104_0004_auth_support_tables.py  20240105_0005_cdss_audit_log.py  20240106_0006_patient_study_links.py  20240107_0007_scheduled_procedures.py  20240108_0008_gdpr_erasure.py  20240109_0009_prescriptions.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  audit.py  dependencies.py  email.py  encryption.py  permissions.py  redis.py  retention.py  security.py  seed.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/integrations/dicom/: __init__.py  models.py  mwl_models.py  mwl_router.py  mwl_service.py  router.py  schemas.py  service.py  sr_parser.py
backend/app/integrations/gesy/: __init__.py  interface.py  mock_provider.py  router.py  schemas.py  service.py
backend/app/integrations/storage/: __init__.py  client.py
backend/app/modules/appointment/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: __init__.py  invitation.py  mfa.py  models.py  password_reset.py  router.py  schemas.py  service.py  session_manager.py
backend/app/modules/cardiology/: __init__.py
backend/app/modules/cardiology/cdss/: __init__.py  calculators.py  models.py  router.py
backend/app/modules/cardiology/cdss/tests/: __init__.py  test_cha2ds2vasc.py  test_grace.py  test_hasbled.py
backend/app/modules/clinic/: __init__.py  models.py
backend/app/modules/coding/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/encounter/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/notes/: __init__.py  extraction.py  models.py  router.py  schemas.py  service.py
backend/app/modules/notes/tests/: __init__.py  test_extraction.py  test_schemas.py  test_service.py
backend/app/modules/patient/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/prescription/: __init__.py  cardiology_formulary.py  interactions.py  models.py  router.py  schemas.py  service.py
backend/app/modules/prescription/tests/: __init__.py  test_formulary.py  test_interactions.py  test_schemas.py
backend/scripts/: seed_codes.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+92 files in other folders)
